# Cppel7

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: Dependencies.cmake  GenerateFromTemplate.cmake
data/: color_palette.txt  font_atlas.txt
src/: CMakeLists.txt  color_palette.h.in  cppel7.cpp  font_atlas.h.in  font_data.h.in  main.cpp
src/core/: CMakeLists.txt  color_palette.h.in  config.h  constants.h  font_atlas.h.in  types.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h  framebuffer.cpp  framebuffer.h  screen.cpp  screen.h  screen_renderer.cpp  screen_renderer.h
src/platform/: CMakeLists.txt  app_state.cpp  app_state.h  sdl_input.cpp  sdl_input.h  sdl_video.cpp  sdl_video.h
src/video/: CMakeLists.txt  draw_context.cpp  draw_context.h  screen.cpp  screen.h  screen_renderer.cpp  screen_renderer.h  video_memory_view.cpp  video_memory_view.h
src/virtual_machine/: CMakeLists.txt  virtual_machine.cpp  virtual_machine.h
tools/: gen_common.py  gen_font.py  gen_palette.py
